my-apps/homepage-dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage-dashboard
  labels:
    app.kubernetes.io/component: monitoring
