my-apps/homepage-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-dashboard
  namespace: homepage-dashboard
spec:
  selector:
    app: homepage-dashboard
  ports:
    - port: 80
      targetPort: 3000
