my-apps/homepage-dashboard/homepage-dashboard-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-dashboard
  namespace: homepage-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: https
  hostnames:
    - "homepage.isandeshsol.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage-dashboard
          port: 3000
