my-apps/homepage-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-dashboard
  namespace: homepage-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-stg
    cert-manager.io/common-name: homepage.isandeshsol.com
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: homepage.isandeshsol.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-dashboard
                port:
                  number: 3000
  tls:
    - hosts:
        - homepage.isandeshsol.com
      secretName: homepage-tls
